<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_text_confirmarInfo"
        android:fontFamily="sans-serif-medium"
        android:text="@string/string_text_confirmaInfo"
        android:textColor="@color/black"
        android:textSize="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimes_text_secondActivity"
        android:layout_marginTop="@dimen/dimens_editText_marginTop"
        android:fontFamily="sans-serif-medium"
        android:text="@string/string_text_Nombre"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimes_text_secondActivity"
        android:layout_marginTop="@dimen/dimens_editText_marginTop"
        android:fontFamily="sans-serif-medium"
        android:text="@string/string_text_Correo"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimes_text_secondActivity"
        android:layout_marginTop="@dimen/dimens_editText_marginTop"
        android:fontFamily="sans-serif-medium"
        android:text="@string/string_text_Numero"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="238dp"
        android:layout_height="26dp"
        android:layout_marginStart="@dimen/dimens_text_Second_marginStart"
        android:layout_marginTop="@dimen/dimens_text_Second_marginTop"
        android:fontFamily="sans-serif-medium"
        android:text="@string/string_show_info"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textViewCorreo"
        android:layout_width="193dp"
        android:layout_height="26dp"
        android:layout_marginStart="@dimen/dimens_text_Second_marginStart"
        android:layout_marginTop="@dimen/dimens_Second_marginTop2"
        android:fontFamily="sans-serif-medium"
        android:text="@string/string_show_info"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

    <TextView
        android:id="@+id/textViewNumero"
        android:layout_width="171dp"
        android:layout_height="26dp"
        android:layout_marginStart="@dimen/dimens_text_Second_marginStart"
        android:layout_marginTop="@dimen/dimens_Second_marginTop2"
        android:fontFamily="sans-serif-medium"
        android:text="@string/string_show_info"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textViewCorreo" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_editText_marginTop"
        android:backgroundTint="@color/button_color"
        android:text="@string/string_button_Compartir"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>